# J-Core

./: .gitmodules  CMakeLists.txt  README.md
ext/imgui/: imgui.h  imgui_widgets.cpp
include/J-Core/: Application.h  EntryPoint.h  Log.h  TaskManager.h  ThreadManager.h
include/J-Core/Gui/: IGuiDrawable.h  IGuiExtras.h  ImGui.h
include/J-Core/IO/: Audio.h  AudioUtils.h  Base64.h  BitStream.h  FileStream.h  IOUtils.h  Image.h  ImageUtils.h  MemoryStream.h  Stream.h  ZLib.h
include/J-Core/Math/: Color24.h  Color32.h  Color4444.h  Color555.h  Color565.h  Color5658.h  Color6666.h  Color7773.h  Math.h  Matrix4f.h  Rect.h  Vertex.h
include/J-Core/Rendering/: Atlas.h  DynamicBatch.h  ICamera.h  Renderable.h  Renderer.h  Shader.h  SortingLayer.h  Sprite.h  Texture.h  Window.h
include/J-Core/Rendering/Buffers/: BufferLayout.h  FrameBuffer.h  FrameBufferPool.h  IndexBuffer.h  VertexArray.h  VertexBuffer.h
include/J-Core/Util/: AlignmentAllocator.h  Bitset.h  DataFormatUtils.h  DataUtilities.h  DataUtils.h  EnumUtils.h  HexStr.h  IComparable.h  PoolAllocator.h  Span.h  Stack.h  StringHelpers.h  StringUtils.h
src/J-Core/: Application.cpp  Log.cpp  TaskManager.cpp  ThreadManager.cpp
src/J-Core/Gui/: IGuiExtras.cpp
src/J-Core/IO/: Audio.cpp  AudioUtils.cpp  Base64.cpp  BitStream.cpp  FileStream.cpp  IOUtils.cpp  Image.cpp  ImageUtils.cpp  MemoryStream.cpp  ZLib.cpp
src/J-Core/Math/: Color24.cpp  Color32.cpp  Color4444.cpp  Color555.cpp  Color565.cpp  Color5658.cpp  Color6666.cpp  Color7773.cpp  Math.cpp  Matrix4f.cpp
src/J-Core/Rendering/: Atlas.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Window.cpp
src/J-Core/Rendering/Buffers/: FrameBuffer.cpp  FrameBufferPool.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/J-Core/Util/: Bitset.cpp  DataFormatUtils.cpp  StringHelpers.cpp  StringUtils.cpp
